--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,14 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html class="h-100">
+<html class="h-100" lang="en" hreflang="en">
 
 <head>
-  <title>Booking Hotel</title>
+  <title>Booking Hotel in Ireland - Find the Best Hotels</title>
+  <meta name="description" content="Discover and book the best hotels in various cities across Ireland. Explore a wide range of accommodations for your perfect stay. Find great deals and plan your trip with ease.">
+  <meta name="keywords" content="hotel booking, Ireland hotels, accommodation, travel, stay in Ireland">
 
-  <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml">
+  <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml" alt="Booking Hotel Logo">
 
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
@@ -71,29 +73,25 @@
   <!-- Footer -->
   <footer class="footer mt-auto py-3 blue-bg">
     <p class="m-0 text-center text-white">
-      <a href="https://www.facebook.com/" target="_blank" class="ms-3">
+      <a href="https://www.facebook.com/" target="_blank" class="ms-3" aria-label="Facebook">
         <i class="fab fa-facebook-square"></i>
       </a>
-      <a href="https://twitter.com/" target="_blank" class="ms-3">
+      <a href="https://twitter.com/" target="_blank" class="ms-3" aria-label="Twitter">
         <i class="fab fa-twitter-square"></i>
       </a>
-      <a href="https://www.instagram.com/" target="_blank" class="ms-3">
+      <a href="https://www.instagram.com/" target="_blank" class="ms-3" aria-label="Instagram">
         <i class="fab fa-instagram-square"></i>
       </a>
-      <a href="https://www.youtube.com/" target="_blank" class="ms-3">
+      <a href="https://www.youtube.com/" target="_blank" class="ms-3" aria-label="YouTube">
         <i class="fab fa-youtube-square"></i>
       </a>
     </p>
   </footer>
   <!-- ---------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------- -->
-  <!-- <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
    <!-- ---------------------------------------------------------------- -->
   <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
-   <!-- ---------------------------------------------------------------- -->
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/locales/bootstrap-datepicker.ru.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
