Add flatpickr for days display

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,9 @@
   <meta name="keywords" content="hotel booking, Ireland hotels, accommodation, travel, stay in Ireland">
 
   <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml" alt="Booking Hotel Logo">
+  <!-- ------------------------------------------------------------------------------------------ -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <!-- ----------------------------------------------------------------------------------------- -->
 
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
@@ -88,6 +91,7 @@
     </p>
   </footer>
   <!-- ---------------------------------------------------------------- -->
+  <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <!-- ---------------------------------------------------------------- -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
    <!-- ---------------------------------------------------------------- -->
