--- a/templates/base.html
+++ b/templates/base.html
@@ -95,11 +95,14 @@
   <!-- ---------------------------------------------------------------- -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
    <!-- ---------------------------------------------------------------- -->
-  <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <script src="{% static 'js/script.js' %}"></script>
+  {% block scripts %}
+    <!-- block for a scripts -->
+  {% endblock %}
 </body>
 
 </html>
