--- a/templates/booking.html
+++ b/templates/booking.html
@@ -2,6 +2,7 @@
 
 {% load crispy_forms_tags %}
 {% load static %}
+
 {% block content %}
 <section class="section bg-white"> 
     <div class="container mt-3 mb-4">
@@ -18,6 +19,7 @@
                             <p><strong>Room:</strong> {{ room.room_name }}</p>
                             <p><strong>Price per night:</strong> €  <span id="price">{{ room.price }}</span></p>
                             <div class="row">
+                            {{ form.media }}
                             {{ form|crispy }}
                             <p style="margin-top: 3rem;"><strong>Total Price:</strong> € <span id="totalPrice">0</span></p>
                             </div>
@@ -32,4 +34,14 @@
         </div>
     </div>
 </section>
+{% block scripts %}
+<script type="text/javascript">
+    if (typeof window.bookedDates === 'undefined') {
+        window.bookedDates = {{ booked_dates|safe }};
+    }
+   
+</script>
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+<script src="{% static 'js/booking.js' %}"></script>
+{% endblock %}
 {% endblock %}
