--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,26 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html class="h-100" lang="en" hreflang="en">
+<html class="h-100" lang="en">
 
 <head>
   <title>Booking Hotel in Ireland - Find the Best Hotels</title>
   <meta name="description" content="Discover and book the best hotels in various cities across Ireland. Explore a wide range of accommodations for your perfect stay. Find great deals and plan your trip with ease.">
   <meta name="keywords" content="hotel booking, Ireland hotels, accommodation, travel, stay in Ireland">
 
-  <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml" alt="Booking Hotel Logo">
-  <!-- ------------------------------------------------------------------------------------------ -->
+  <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-  <!-- ----------------------------------------------------------------------------------------- -->
-
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" >
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet" >
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet" >
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" >
+  <meta name="viewport" content="width=device-width, initial-scale=1" >
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
-  <!-- ---------------------------------------------------------------- -->
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker.min.css">
-  <!-- ---------------------------------------------------------------- -->
-  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
@@ -90,12 +85,8 @@
       </a>
     </p>
   </footer>
-  <!-- ---------------------------------------------------------------- -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-  <!-- ---------------------------------------------------------------- -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-   <!-- ---------------------------------------------------------------- -->
-  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
