--- a/templates/booking.html
+++ b/templates/booking.html
@@ -35,11 +35,10 @@
     </div>
 </section>
 {% block scripts %}
-<script type="text/javascript">
+<script>
     if (typeof window.bookedDates === 'undefined') {
         window.bookedDates = {{ booked_dates|safe }};
     }
-   
 </script>
 <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
 <script src="{% static 'js/booking.js' %}"></script>
