--- a/templates/booking.html
+++ b/templates/booking.html
@@ -19,7 +19,7 @@
                             <p><strong>Room:</strong> {{ room.room_name }}</p>
                             <p><strong>Price per night:</strong> €  <span id="price">{{ room.price }}</span></p>
                             <div class="row">
-                            {{ form.media }}
+                            <!-- {{ form.media }} -->
                             {{ form|crispy }}
                             <p style="margin-top: 3rem;"><strong>Total Price:</strong> € <span id="totalPrice">0</span></p>
                             </div>
@@ -40,7 +40,8 @@
         window.bookedDates = {{ booked_dates|safe }};
     }
 </script>
-<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script> -->
 <script src="{% static 'js/booking.js' %}"></script>
 {% endblock %}
 {% endblock %}
