--- a/templates/edit_booking.html
+++ b/templates/edit_booking.html
@@ -35,7 +35,8 @@
         window.bookedDates = {{ booked_dates|safe }};
     }
 </script>
-<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script> -->
 <script src="{% static 'js/booking.js' %}"></script>
 {% endblock %}
 
