Add comments in code

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,11 @@
 <html class="h-100" lang="en">
 
 <head>
+  <!-- Head Section -->
   <title>Booking Hotel in Ireland - Find the Best Hotels</title>
   <meta name="description" content="Discover and book the best hotels in various cities across Ireland. Explore a wide range of accommodations for your perfect stay. Find great deals and plan your trip with ease.">
   <meta name="keywords" content="hotel booking, Ireland hotels, accommodation, travel, stay in Ireland">
-
+  <!-- Favicon and Stylesheets -->
   <link rel="icon" href="{% static 'images/favicon.svg' %}" type="image/svg+xml">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" >
@@ -48,7 +49,6 @@
         </div>
     </div>
   </nav>
-
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
@@ -61,7 +61,6 @@
       </div>
     </div>
   </div>
-
   <main class="flex-shrink-0 main-bg">
     {% block content %}
     <!-- Content  -->
@@ -70,6 +69,7 @@
 
   <!-- Footer -->
   <footer class="footer mt-auto py-3 blue-bg">
+    <!-- Social Media Icons -->
     <p class="m-0 text-center text-white">
       <a href="https://www.facebook.com/" target="_blank" class="ms-3" aria-label="Facebook">
         <i class="fab fa-facebook-square"></i>
