--- a/templates/booking.html
+++ b/templates/booking.html
@@ -4,6 +4,7 @@
 {% load static %}
 
 {% block content %}
+<!-- Booking Section -->
 <section class="section bg-white"> 
     <div class="container mt-3 mb-4">
         <h2 class="text-9 text-center fw-500">Booking Room</h2>
