--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+<!-- Carousel Section -->
 <section class="container mt-2 mb-2  bg-white">
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner rounded-4">
@@ -89,6 +90,7 @@
         </div>
     </div>
 </section>
+<!-- Why Book with Us Section -->
 <section class="section bg-white">
     <div class="container text-center mt-5">
         <h2 class="text-9 fw-500">Why Book with Us?</h2>
@@ -129,6 +131,7 @@
         </div>
     </div>
 </section>
+<!-- Special Offers Section -->
 <section class="section bg-white">
     <div class="container text-center mt-5">
         <h2 class="text-9 fw-500">Special Offers: Promotions, Discounts, and Exclusive Deals Await You</h2>
@@ -177,6 +180,7 @@
         </div>
     </div>
 </section>
+<!-- Best Hotels Section -->
 <section class="section bg-white">
     <div class="container text-center mt-5 mb-5">
         <h2 class="text-9 fw-500">Best Hotels: High Ratings and Guest Preference</h2>
