--- a/templates/edit_booking.html
+++ b/templates/edit_booking.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+<!-- Edit Booking Section -->
 <section class="section bg-white">
     <div class="container mt-3 mb-4">
         <h2 class="text-9 text-center fw-500">Edit Booking</h2>
@@ -36,7 +37,6 @@
     }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-<!-- <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script> -->
 <script src="{% static 'js/booking.js' %}"></script>
 {% endblock %}
 
