--- a/templates/my_booking.html
+++ b/templates/my_booking.html
@@ -2,6 +2,7 @@
 <section class="section bg-white">
     <div class="container mt-3 mb-4">
         <h1 class="text-9 text-center fw-500">My booking</h1>
+        <!-- Booking Cards -->
         <div class="row">
             {% if bookings %} {% for booking in bookings %}
             <div class="col-md-6">
@@ -57,6 +58,7 @@
             </div>
             {% endfor %} {% endif %}
         </div>
+        <!-- No Bookings Message -->
         {% if not bookings %}
         <div class="row">
             <div class="col-md-12">
@@ -69,6 +71,7 @@
         {% endif %}
     </div>
 </section>
+ <!-- Cancellation Confirmation Modal -->
 {% if bookings %} {% for booking in bookings %}
 <div class="modal fade" id="confirmModal{{ booking.id }}" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
