--- a/templates/success_booking.html
+++ b/templates/success_booking.html
@@ -5,6 +5,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 text-center  mt-3">
+                 <!-- Reservation Success Message -->
                 <h2 class="text-9 text-center fw-500">Reservation completed successfully!</h2>
                 <p class="text-9 text-center">Thank you for choosing our hotel. Your booking was successful. <br> You can view the details of your reservation below:</p>
             </div>
@@ -21,6 +22,7 @@
                     {% if booking.is_cancelled %}
                     <p>Status: Cancelled</p>
                     {% else %}
+                    <!-- Booking Actions -->
                         <div class="button-container justify-content-center">
                             <a href="{% url 'edit_booking' booking.id %}" class="btn btn-primary">Edit
                                 Booking</a>
@@ -38,11 +40,13 @@
                     </div>
                 </div>
             </div>
+            <!-- Image Display -->
             <div class="col-md-6 card-body d-flex align-items-center justify-content-center fixed-image-container">
                 <img src="{% static 'images/success.webp' %}" alt="Form Image" class="img-fluid" style="max-width: 80%; height: auto;">
             </div>
         </div>
     </div>
+     <!-- Cancellation Confirmation Modal -->
     <div class="modal fade" id="confirmModal{{ booking.id }}" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
