--- a/templates/room_detail.html
+++ b/templates/room_detail.html
@@ -104,7 +104,7 @@
               <div class="container mt-2">
                 <h4>Facilities:</h4>
                 <div class="row">
-                    {% for facility in room.facilities.all %}
+                    <!-- {% for facility in room.facilities.all %} -->
                         <div class="col-md-3 mb-1">
                             <div class="card">
                                 <div class="card-body text-center p-0">
@@ -112,7 +112,7 @@
                                 </div>
                             </div>
                         </div>
-                    {% endfor %}
+                    <!-- {% endfor %} -->
                 </div>
             </div>
               <!-- Room Description -->
