--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,8 @@
   <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  
 </head>
 
 <body class="d-flex flex-column h-100 main-bg">
@@ -49,9 +51,9 @@
         </div>
     </div>
   </nav>
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
-      <div class="col-md-8 offset-md-2">
+      <div class="col-md-8 offset-md-2 text-center">
         {% for message in messages %}
         <div class="alert {{ message.tags }} alert-dismissible fade show" id="msg" role="alert">
           {{ message | safe }}
@@ -60,7 +62,7 @@
         {% endfor %}
       </div>
     </div>
-  </div>
+  </div> -->
   <main class="flex-shrink-0 main-bg">
     {% block content %}
     <!-- Content  -->
@@ -85,6 +87,17 @@
       </a>
     </p>
   </footer>
+  <script>
+    {% for message in messages %}
+      Swal.fire({
+        title: "{{ message.tag }}",
+        text: "{{ message }}",
+        icon: "success",
+        timer: 4500
+      });
+    {% endfor %}
+  </script>
+  
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
