Add display booking dates on edit booking page

--- a/templates/edit_booking.html
+++ b/templates/edit_booking.html
@@ -37,7 +37,7 @@
     }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-<script src="{% static 'js/booking.js' %}"></script>
+<script src="{% static 'js/booking_edit.js' %}"></script>
 {% endblock %}
 
 {% endblock %}
