--- a/templates/404.html
+++ b/templates/404.html
@@ -1,28 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found</title>
-    <style>
-        body {
-            text-align: center;
-            padding: 50px;
-        }
-
-        h1 {
-            font-size: 50px;
-        }
-
-        p {
-            font-size: 20px;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1" >
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
-    <a href="{% url 'home' %}">Return to Home</a>
-    <img src="{% static 'images/image404.webp' %}" alt="Page Not Found">
-    <h1>Page Not Found</h1>
-    <p>The requested page could not be found.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center  mt-5 mb-5">
+                <h1>Page Not Found</h1>
+                <a class="btn btn-primary" href="{% url 'home' %}">Return to Home</a>
+            </div>
+            <div class="col-md-12 d-flex  align-items-center justify-content-center">
+                <img src="{% static 'images/image404.webp' %}" alt="Page Not Found" class="img-fluid mx-auto" style="max-width: 50%; height: auto;">
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 </html>
